--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc",
-    "test:watch": "jest --watch"
+    "build": "tsc && npm run build:gui",
+    "build:gui": "vite build",
+    "test:watch": "jest --watch",
+    "dev:gui": "vite dev"
   },
   "keywords": [],
   "author": "",
@@ -16,18 +18,31 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^24.5.2",
     "@types/pg": "^8.15.5",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
     "@types/swagger-ui-express": "^4.1.8",
+    "@vitejs/plugin-react": "^5.0.4",
     "jest": "^30.1.3",
     "node-mocks-http": "^1.17.2",
     "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vite": "^7.1.9"
   },
   "types": "dist/index.d.ts",
   "dependencies": {
+    "@codemirror/lang-json": "*",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.4",
+    "@mui/material": "^7.3.4",
+    "@uiw/react-codemirror": "^4.23.10",
     "express": "^5.1.0",
     "kysely": "^0.28.7",
     "pg": "^8.16.3",
-    "swagger-ui-express": "^5.0.1"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "swagger-ui-express": "^5.0.1",
+    "chevrotain": "^10.5.0"
   }
 }
