--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,16 @@
     "outDir": "dist",
     "rootDir": "src",
     "resolveJsonModule": true,
-    "sourceMap": true,
-    "declaration": true
+    "sourceMap": false,
+    "declaration": false
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "__tests__",
+    "**/__tests__/**",
+    "**/*.test.ts",
+    "src/renderer"
+  ]
 }
