--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ node_modules
 /dist
 npm-debug.log*
 .DS_Store
-# Docker/Postgres artifacts
 docker/postgres/postgres.env
 docker/postgres/data/
+coverage
