--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^19.2.0",
     "@types/swagger-ui-express": "^4.1.8",
     "@vitejs/plugin-react": "^5.0.4",
+    "drizzle-kit": "^0.31.5",
     "jest": "^30.1.3",
     "node-mocks-http": "^1.17.2",
     "ts-jest": "^29.4.4",
@@ -37,12 +38,12 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@uiw/react-codemirror": "^4.23.10",
+    "chevrotain": "^10.5.0",
+    "drizzle-orm": "^0.44.6",
     "express": "^5.1.0",
-    "kysely": "^0.28.7",
     "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "swagger-ui-express": "^5.0.1",
-    "chevrotain": "^10.5.0"
+    "swagger-ui-express": "^5.0.1"
   }
 }
